--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -8,7 +8,7 @@
     </div>
 		<div ng-init="updateProjects()" class="list-group">
 			<a ng-click="delete || viewProject(project.id)" class="list-group-item" ng-repeat="project in projects | filter: { is_archived: '!' + 1}">
-				<button ng-disabled="project.id === '1' || project.id === '2' || project.id === '3'" class="btn btn-danger" ng-show="delete" ng-click="deleteOverlay(project)">DELETE</button>{{project.name}}
+				<button ng-disabled="project.id === '1' || project.id === '2' || project.id === '3' || project.id === '4'" class="btn btn-danger" ng-show="delete" ng-click="deleteOverlay(project)">DELETE</button>{{project.name}}
 				<i class="glyphicon glyphicon-chevron-right pull-right"></i>
 			</a>
 	</div>
