modified the menu bar according to user story #62

--- a/src/less/app.less
+++ b/src/less/app.less
@@ -6,6 +6,12 @@
 @import "bower_components/ng-notify/dist/ng-notify.min.css";
 @import "bower_components/eonasdan-bootstrap-datetimepicker/src/less/_bootstrap-datetimepicker.less";
 
+/* Navbar button styles */
+.btn-navbar i {
+  display: block;
+  line-height: 10px;
+  padding-top: 10px;
+}
 
 /* Session icon styles */
 .session-icon {
