--- a/src/templates/addProject.html
+++ b/src/templates/addProject.html
@@ -25,6 +25,17 @@
 						please fill out every field
 					</p>
 				</div>
+				<div class="form-group">
+					<label>Final project date</label>
+					<input type="text" class="hidden"
+			      datetimepicker
+			      datetimepicker-options="{
+			       	format: 'YYYY/MM/DD',
+			        inline: true
+			      }"
+			      name="date"
+			      ng-model="project.date">
+				</div>
 			</fieldset>
 			<div ui-content-for="navbarAction">
 		    <button ng-disabled="form.$invalid" class="btn" ng-click="addProject(project)">
