--- a/src/less/app.less
+++ b/src/less/app.less
@@ -20,11 +20,12 @@
   line-height: 68px;
   width: 72px;
   text-align: center;
-  opacity: .8;
   border: 3px solid;
   border-radius: 200px;
   height: 72px;
   margin-bottom: 20px;
+  margin-top: 20px;
+  margin-right: 10px;
 }
 
 /* Timer styles */
