--- a/src/templates/viewProject.html
+++ b/src/templates/viewProject.html
@@ -1,5 +1,5 @@
 <div class="scrollable">
-	<div class="scrollable-content section" ng-init="getProject()">
+	<div class="scrollable-header" ng-init="getProject()">
 		<div ui-content-for="title">
 			<span>{{title}}</span>
 		</div>
@@ -7,12 +7,18 @@
       <button class="btn" ng-click="addSession(project.id)">add session</button>
     </div>
     <div ng-show="project.is_used === 1"class="text-center">
-			<i class="glyphicon glyphicon-play session-icon text-primary" ng-click="start(project.id)"></i>	
-			<i class="glyphicon glyphicon-stop session-icon text-primary" ng-click="stop(project.id)"></i>
+			<i class="glyphicon glyphicon-play session-icon text-success" ng-click="start(project.id)"></i>	
+			<i class="glyphicon glyphicon-stop session-icon text-danger" ng-click="stop(project.id)"></i>
 			<div>
 				<p class="timer">{{counter}}</p>
 			</div>
     </div>
-
+	</div>
+	<div class="scrollable-content section">
+		<div class="list-group" ng-init="updateSessions()">
+			<a class="list-group-item" href="" ng-repeat="session in sessions | orderBy: '-timestamp_start'">
+				{{session.timestamp_start*1000 | date: 'dd.MM.yyyy'}} | {{session.timestamp_start*1000 | date: 'HH:mm'}} | {{session.timestamp_stop*1000 | date: 'HH:mm'}}
+			</a>
+		</div>
 	</div>
 </div>
