--- a/src/templates/viewProject.html
+++ b/src/templates/viewProject.html
@@ -6,7 +6,10 @@
 		<div ui-content-for="navbarAction">
       <button class="btn" ng-click="addSession(project.id)">add session</button>
     </div>
-    <div ng-show="project.is_used === 1"class="text-center">
+    <div ui-content-for="navbarMenu">
+    	<button class="btn" ng-model="delete" ng-click="delete = !delete">Edit</button>
+    </div>
+    <div ng-show="project.is_used === 1" class="text-center">
 			<i class="glyphicon glyphicon-play session-icon text-success" ng-click="start(project.id)"></i>	
 			<i class="glyphicon glyphicon-stop session-icon text-danger" ng-click="stop(project.id)"></i>
 			<div>
@@ -17,8 +20,31 @@
 	<div class="scrollable-content section">
 		<div class="list-group" ng-init="updateSessions()">
 			<a class="list-group-item" href="" ng-repeat="session in sessions | orderBy: '-timestamp_start'">
+				<button class="btn btn-danger" ng-show="delete" ng-click="deleteOverlay(session)">DELETE</button>
 				{{session.timestamp_start*1000 | date: 'dd.MM.yyyy'}} | {{session.timestamp_start*1000 | date: 'HH:mm'}} | {{session.timestamp_stop*1000 | date: 'HH:mm'}}
 			</a>
 		</div>
 	</div>
 </div>
+
+<!-- overlay template -->
+<script type="text/ng-template" id="modal.html">
+	<div class="modal modal-overlay">
+	  <div class="modal-dialog">
+	    <div class="modal-content">
+	      <div class="modal-header">
+	        <button class="close"
+	                ng-click="close('Cancel')" data-dismiss="modal">&times;</button>
+	        <h4 class="modal-title">Delete confirmation</h4>
+	      </div>
+	      <div class="modal-body">
+	        <p>Are you sure?</p>
+	      </div>
+	      <div class="modal-footer">
+	        <button ng-click="close('Yes')" data-dismiss="modal" class="btn btn-primary">Yes</button>
+	        <button ng-click="close('Cancel')" data-dismiss="modal" class="btn btn-default">No</button>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+</script>
