fixed last bugs in dashboard file and added css styles for dashboard view

--- a/src/less/app.less
+++ b/src/less/app.less
@@ -28,3 +28,13 @@
   font-size: 40px;
   font-weight: bold;
 }
+
+/* Dashboard styles */
+.dashboard-number {
+  font-size: 34px;
+  padding: 0;
+  line-height: 68px;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  margin-right: 10px;
+}
