--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -1,12 +1,13 @@
 <div ui-content-for="title">
 	<span>Dashboard</span>
 </div>
-<div class="scrollable">
-	<div class="scrollable-header" ng-init="updateDashboard()">
-	</div>
-    
-	<div class="scrollable-content section">
-		{{overtime}}
-		{{leftVacationDays}}
+<div class="scrollable">    
+	<div class="scrollable-content" ng-init="updateDashboard()">
+		<div class="list-group text-center">
+			<div class="list-group-item">
+				<div class="dashboard-number"><p>{{overtime}} h overtime</div>
+				<div class="dashboard-number">{{leftVacationDays}} <span ng-show="leftVacationDays === 1">day</span><span ng-hide="leftVacationDays === 1">days</span> vacation left</div>
+			</div>
+		</div>
 	</div>
 </div>
