added button to trigger csv creation function and fixed minor bugs

--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -7,6 +7,7 @@
 			<div class="list-group-item">
 				<div class="dashboard-number"><p>{{overtime}} h overtime</div>
 				<div class="dashboard-number">{{leftVacationDays}} <span ng-show="leftVacationDays === 1">day</span><span ng-hide="leftVacationDays === 1">days</span> vacation left</div>
+				<button class="btn btn-primary" ng-click="createCSV()">Generate CSV-file</button>
 			</div>
 		</div>
 	</div>
