deleted modal service plugin and added confirm click service instead; furthermore simplified gulp configuration files

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -14,31 +14,10 @@
   <div class="scrollabale-content">
 		<div ng-init="updateProjects()" class="list-group">
 			<a ng-click="delete || viewProject(project.id)" class="list-group-item" ng-repeat="project in projects | filter: { is_archived: '!' + 1 } | orderBy: orderProjects | filter: searchProjects">
-				<button ng-disabled="project.id === '00001' || project.id === '00002' || project.id === '00003' || project.id === '00004'" class="btn btn-danger" ng-show="delete" ng-click="deleteOverlay(project)">DELETE</button>{{project.name}}
+				<button class="btn btn-danger" ng-disabled="project.id === '00001' || project.id === '00002' || project.id === '00003' || project.id === '00004'" ng-show="delete" confirm-click="deleteProject(project);" confirm-message="Are you sure?">DELETE</button>
+				{{project.name}}
 				<i class="glyphicon glyphicon-chevron-right pull-right"></i>
 			</a>
 		</div>
 	</div>
 </div>
-
-<!-- overlay template -->
-<script type="text/ng-template" id="modal.html">
-	<div class="modal modal-overlay">
-	  <div class="modal-dialog">
-	    <div class="modal-content">
-	      <div class="modal-header">
-	        <button class="close"
-	                ng-click="close('Cancel')" data-dismiss="modal">&times;</button>
-	        <h4 class="modal-title">Delete confirmation</h4>
-	      </div>
-	      <div class="modal-body">
-	        <p>Are you sure?</p>
-	      </div>
-	      <div class="modal-footer">
-	        <button ng-click="close('Yes')" data-dismiss="modal" class="btn btn-primary">Yes</button>
-	        <button ng-click="close('Cancel')" data-dismiss="modal" class="btn btn-default">No</button>
-	      </div>
-	    </div>
-	  </div>
-	</div>
-</script>
