--- a/src/templates/viewProject.html
+++ b/src/templates/viewProject.html
@@ -20,31 +20,9 @@
 	<div class="scrollable-content section">
 		<div class="list-group" ng-init="updateSessions()">
 			<a class="list-group-item" href="" ng-repeat="session in sessions | orderBy: '-timestamp_start'">
-				<button class="btn btn-danger" ng-show="delete" ng-click="deleteOverlay(session)">DELETE</button>
+				<button class="btn btn-danger" ng-show="delete" confirm-click="deleteSession(session);" confirm-message="Are you sure?">DELETE</button>
 				{{session.timestamp_start*1000 | date: 'dd.MM.yyyy'}} | {{session.timestamp_start*1000 | date: 'HH:mm'}} | {{session.timestamp_stop*1000 | date: 'HH:mm'}} | {{calculateSessionDuration(session)}} 
 			</a>
 		</div>
 	</div>
 </div>
-
-<!-- overlay template -->
-<script type="text/ng-template" id="modal.html">
-	<div class="modal modal-overlay">
-	  <div class="modal-dialog">
-	    <div class="modal-content">
-	      <div class="modal-header">
-	        <button class="close"
-	                ng-click="close('Cancel')" data-dismiss="modal">&times;</button>
-	        <h4 class="modal-title">Delete confirmation</h4>
-	      </div>
-	      <div class="modal-body">
-	        <p>Are you sure?</p>
-	      </div>
-	      <div class="modal-footer">
-	        <button ng-click="close('Yes')" data-dismiss="modal" class="btn btn-primary">Yes</button>
-	        <button ng-click="close('Cancel')" data-dismiss="modal" class="btn btn-default">No</button>
-	      </div>
-	    </div>
-	  </div>
-	</div>
-</script>
