--- a/src/templates/addProject.html
+++ b/src/templates/addProject.html
@@ -3,7 +3,7 @@
 		<div ui-content-for="title">
 			<span>Add new project</span>
 		</div>
-		<form novalidate name="form" ng-submit="addProject(project)">
+		<form novalidate name="form">
 			<fieldset>
 				<div class="form-group">
 					<label>Project ID</label>
@@ -36,17 +36,30 @@
 			      name="date"
 			      ng-model="project.date">
 				</div>
+				<div class="form-group">
+					<label>Longitude</label>
+					<input class="form-control" name="longitude" type="text" placeholder="Please enter longitude or use track button" ng-model="project.longitude" />
+				</div>
+				<div class="form-group">
+					<label>Latitude</label>
+					<input class="form-control" name="latitude" type="text" placeholder="Please enter latitude or use track button" ng-model="project.latitude" />
+				</div>
 			</fieldset>
 			<div ui-content-for="navbarAction">
 		    <button ng-disabled="form.$invalid" class="btn" ng-click="addProject(project)">
 		      Save
 		    </button>
 		  </div>
-			<div>
-		    <button ng-disabled="form.$invalid" class="btn btn-primary btn-block" type="submit">
-		      Save
+	    <div style="padding-bottom: 10px">
+		    <button class="btn btn-warning btn-block" ng-click="trackProject()">
+		      Track
 		    </button>
-		  </div>
+	    </div>
+    	<div>
+        <button ng-disabled="form.$invalid" class="btn btn-primary btn-block" ng-click="addProject(project)">
+          Save
+        </button>
+      </div>
 		</form>
 	</div>
 </div>
