--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -13,7 +13,7 @@
 	    placeholder="Search.." />
   <div class="scrollabale-content">
 		<div ng-init="updateProjects()" class="list-group">
-			<a ng-click="delete || viewProject(project.id)" class="list-group-item" ng-repeat="project in projects | filter: { is_archived: '!' + 1 } | orderBy: orderProjects | filter: searchProjects">
+			<a ng-click="delete || viewProject(project.id)" class="list-group-item" ng-repeat="project in projects | filter: { is_archived: '!' + 1 } | filter: searchProjects">
 				<button class="btn btn-danger" ng-disabled="project.id === '00001' || project.id === '00002' || project.id === '00003' || project.id === '00004'" ng-show="delete" confirm-click="deleteProject(project);" confirm-message="Are you sure?">DELETE</button>
 				{{project.name}}
 				<i class="glyphicon glyphicon-chevron-right pull-right"></i>
