added edit button to project view and added reference function to edit page

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -15,6 +15,7 @@
 		<div ng-init="updateProjects()" class="list-group">
 			<a ng-click="delete || viewProject(project.id)" class="list-group-item" ng-repeat="project in projects | filter: { is_archived: '!' + 1 } | filter: searchProjects">
 				<button class="btn btn-danger" ng-disabled="project.id === '00001' || project.id === '00002' || project.id === '00003' || project.id === '00004'" ng-show="delete" confirm-click="deleteProject(project);" confirm-message="Are you sure?">DELETE</button>
+				<button class="btn btn-warning" ng-disabled="project.id === '00001' || project.id === '00002' || project.id === '00003' || project.id === '00004'" ng-show="delete" ng-click="editProject(project.id)">EDIT</button>
 				{{project.name}}
 				<i class="glyphicon glyphicon-chevron-right pull-right"></i>
 			</a>
