--- a/src/templates/editProject.html
+++ b/src/templates/editProject.html
@@ -18,6 +18,7 @@
 				</div>
 				<div class="form-group">
 					<label>Final project date</label>
+					<p>Current final project date: {{origDate | date: 'dd.MM.yyyy'}}</p>
 					<input type="text" class="hidden"
 			      datetimepicker
 			      datetimepicker-options="{
