added angular-timer plugin and specified datepicker options

--- a/src/templates/createSession.html
+++ b/src/templates/createSession.html
@@ -11,7 +11,8 @@
 			      datetimepicker
 			      datetimepicker-options="{
 			       	format: 'YYYY/MM/DD',
-			        inline: true
+			        inline: true,
+			        locale: 'en'
 			      }"
 			      name="date"
 			      ng-model="session.date">
