implemented angular-timer and at the same time refactored ViewProjectController

--- a/src/less/app.less
+++ b/src/less/app.less
@@ -8,8 +8,8 @@
 
 /* Session icon styles */
 .session-icon {
-  font-size: 44px;
-  padding: 0;
+  display: inline-block;
+  font-size: 20px;
   line-height: 68px;
   width: 72px;
   text-align: center;
@@ -19,14 +19,6 @@
   margin-bottom: 20px;
   margin-top: 20px;
   margin-right: 10px;
-}
-
-/* Timer styles */
-.timer {
-  letter-spacing: 2px;
-  display: inline;
-  font-size: 40px;
-  font-weight: bold;
 }
 
 /* Dashboard styles */
