fixed bug in editProject view

--- a/src/templates/editProject.html
+++ b/src/templates/editProject.html
@@ -23,7 +23,8 @@
 			      datetimepicker
 			      datetimepicker-options="{
 			       	format: 'YYYY/MM/DD',
-			        inline: true
+			        inline: true,
+			        locale: 'en'
 			      }"
 			      name="date"
 			      ng-model="project.date">
