changed background color and font color of top navbar to match corporate id colors and changed background color of global background

--- a/src/less/app.less
+++ b/src/less/app.less
@@ -6,6 +6,11 @@
 @import "bower_components/ng-notify/dist/ng-notify.min.css";
 @import "bower_components/eonasdan-bootstrap-datetimepicker/src/less/_bootstrap-datetimepicker.less";
 
+/* App global styles */
+.app {
+  background-color: #bfc9d0;
+}
+
 /* Session icon styles */
 .session-icon {
   display: inline-block;
@@ -29,4 +34,15 @@
   margin-bottom: 20px;
   margin-top: 20px;
   margin-right: 10px;
+}
+
+/* Navbar styles */
+.navbar-absolute-top {
+  color: #fff;
+  background-color: #00375b;
+  border-bottom-width: 0px;
+}
+
+.navbar-absolute-bottom {
+  color: #fff;
 }
