changed color of active and inactive bottom navigation items

--- a/src/less/app.less
+++ b/src/less/app.less
@@ -43,6 +43,9 @@
   border-bottom-width: 0px;
 }
 
-.navbar-absolute-bottom {
-  color: #fff;
+.navbar-absolute-bottom .btn-group a {
+  color: #5e5e5d;
+}
+.navbar-absolute-bottom .btn-group a.active{
+  color: #007aff;
 }
