added corporate id icons to bottom navbar and removed unused icons from images folder

--- a/src/less/app.less
+++ b/src/less/app.less
@@ -46,6 +46,15 @@
 .navbar-absolute-bottom .btn-group a {
   color: #5e5e5d;
 }
-.navbar-absolute-bottom .btn-group a.active{
+
+.navbar-absolute-bottom .btn-group a img {
+  background-color: #5e5e5d;
+}
+
+.navbar-absolute-bottom .btn-group a.active {
   color: #007aff;
+}
+
+.navbar-absolute-bottom .btn-group a.active img {
+  background-color: #007aff;
 }
