--- a/src/templates/createSession.html
+++ b/src/templates/createSession.html
@@ -18,6 +18,10 @@
 			      ng-model="session.date">
 				</div>
 
+				<div class="form-group" ng-show="checkWorkday()">
+					<div class="alert alert-warning"><b>Warning!</b> Please be aware that your selected day is no workday!</div>
+				</div>
+
 				<div class="form-group">
 					<label>Begin of working time</label>
 					<input type="text" class="hidden"
