changed warning-color to corporate id color and fixed bug which switched the location sort toggle on while updating other user data

--- a/src/less/app.less
+++ b/src/less/app.less
@@ -9,8 +9,10 @@
 /* Corporate ID colors */
 @CIDMain: #00375b;
 @CIDSub: #bfc9d0;
+@CIDSub2: #00918e;
 
 @brand-primary: @CIDMain;
+@brand-warning: @CIDSub2;
 @navbar-default-color: @CIDSub;
 @navbar-default-link-color:  @CIDSub;
 
